# movefaults

./: .gitignore  README.md  RESUME_NEXT.md  alembic.ini  cleanup_and_recommit.sh  conftest.py  docker-compose.yml  final_cleanup.sh  migrate_to_monorepo.sh  migrate_to_monorepo_v2.sh  pyproject.toml  recover_and_move.sh  reorganize_analysis_scripts.sh  session_handover.md  session_log_20260126.md  session_log_20260130.md  session_log_20260131.md  session_log_20260224.md  session_log_20260226.md  session_log_20260228.md  session_log_20260302.md  session_log_20260303.md  session_log_20260419.md  session_log_20260622.md  session_log_20260623.md  session_log_20260624.md  session_log_20260625.md  session_log_20260626.md  session_log_20260701.md  session_log_20260702.md  tiger-cloud-pogf-db-credentials.env  tiger-cloud-pogf-db-credentials.env.example  unify_and_commit.sh
.github/workflows/: deploy_docs.yml
analysis/01 RINEX conversion/: campaign_v5.py  campaign_v5_mounted.py  campaign_v5_multiplefilesperday.py  campaign_v6.py  continuous_v5.py  continuous_v6.py  leica2rinex.bat
analysis/02 Time Series/: 00_CRD_NAMRIA.bat  00_CRD_NP.bat  00_CRD_PIVS.bat  Outliers-input name.py  README.docx  RUNX_v2.py  vel_line.m
docs/: Bernese software documentation extraction - Claude.html  CODE_REVIEW_VADASE_INGESTION.md  GNSS automation development effort estimation - Claude.html  GNSS data processing automation roadmap - Claude.html  Git diff notation explanation for documentation - Claude.html  Google Gemini-docling.html  POGF proposal revision for institutional tone - Claude.html  Philippine Open Geodesy Framework proposal - Claude.html  Smart USB data ingestion system - Claude.html  Volcano-specific rules in har-automation evaluation - Claude.html  Work instructions document overview - Claude.html  bernese_linux_setup_primer.md  bernese_orchestration_explainer.md  drive-archaeologist.tree  gnss_automation_roadmap.md  index.md  mkdocs.yml  vadase-rt-monitor.tree  work_instructions_review.md
migrations/: env.py
plans/: igs-downloader-reserach.md  vadase-output-port.md
scripts/: RESUME_pagenet_week.md  gh_pr_create_nopush.sh  gh_retarget.sh  git_merge_main.sh  git_merge_ref.sh  merge_pr.sh  open_pr.sh  pagenet_pcs.pl  run_pagenet_week.sh  seed_stations.py
(+389 files in other folders)
